# scop

./: CMakeLists.txt  Makefile  bois.xpm  task.txt
incs/: mlx_macros.h  scop.h
libft/: Makefile
libft/includes/: get_next_line.h  libft.h  libftprintf.h
libft/srcs/libft/: ft_atof.c  ft_atol.c  ft_itoa.c  ft_itoa_base.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strtrim_negative.c
libft/srcs/libftprintf/: ft_isconv.c  ft_printf.c  ft_printf_conversion_c.c  ft_printf_conversion_d.c  ft_printf_conversion_lc.c  ft_printf_conversion_ld.c  ft_printf_conversion_lo.c  ft_printf_conversion_ls.c  ft_printf_conversion_lu.c  ft_printf_conversion_o.c  ft_printf_conversion_p.c  ft_printf_conversion_s.c  ft_printf_conversion_u.c  ft_printf_conversion_x.c  ft_printf_conversion_xmaj.c  ft_printf_flags.c  ft_printf_len_modifier.c  ft_printf_no_conv.c  ft_printf_percentage.c  ft_putwchar.c  ft_putwstr.c  ft_wstrlen.c  parser.c  signed_check.c  unsigned_check.c
resources/: ._42.mtl  ._mlx_README  ._mlx_opengl.h  ._teapot2.mtl
shaders/: fragment_shader.shader  vertex_shader.shader
srcs/: colors.c  display.c  face_parsing.c  init.c  key_handling.c  main.c  matrices.c  parser.c  shader_data.c  shaders.c  vertex_parsing.c
