cmake_minimum_required(VERSION 3.8)
project(scop)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        incs/mlx_macros.h
        incs/scop.h
        libft/includes/get_next_line.h
        libft/includes/libft.h
        libft/includes/libftprintf.h
        libft/srcs/libft/ft_atoi.c
        libft/srcs/libft/ft_atol.c
        libft/srcs/libft/ft_bzero.c
        libft/srcs/libft/ft_isalnum.c
        libft/srcs/libft/ft_isalpha.c
        libft/srcs/libft/ft_isascii.c
        libft/srcs/libft/ft_isdigit.c
        libft/srcs/libft/ft_isprint.c
        libft/srcs/libft/ft_itoa.c
        libft/srcs/libft/ft_itoa_base.c
        libft/srcs/libft/ft_lstadd.c
        libft/srcs/libft/ft_lstdel.c
        libft/srcs/libft/ft_lstdelone.c
        libft/srcs/libft/ft_lstiter.c
        libft/srcs/libft/ft_lstnew.c
        libft/srcs/libft/ft_memalloc.c
        libft/srcs/libft/ft_memccpy.c
        libft/srcs/libft/ft_memchr.c
        libft/srcs/libft/ft_memcmp.c
        libft/srcs/libft/ft_memcpy.c
        libft/srcs/libft/ft_memdel.c
        libft/srcs/libft/ft_memmove.c
        libft/srcs/libft/ft_memset.c
        libft/srcs/libft/ft_putchar.c
        libft/srcs/libft/ft_putchar_fd.c
        libft/srcs/libft/ft_putendl.c
        libft/srcs/libft/ft_putendl_fd.c
        libft/srcs/libft/ft_putnbr.c
        libft/srcs/libft/ft_putnbr_fd.c
        libft/srcs/libft/ft_putstr.c
        libft/srcs/libft/ft_putstr_fd.c
        libft/srcs/libft/ft_reverse.c
        libft/srcs/libft/ft_strcat.c
        libft/srcs/libft/ft_strchr.c
        libft/srcs/libft/ft_strclr.c
        libft/srcs/libft/ft_strcmp.c
        libft/srcs/libft/ft_strcpy.c
        libft/srcs/libft/ft_strdel.c
        libft/srcs/libft/ft_strdup.c
        libft/srcs/libft/ft_strequ.c
        libft/srcs/libft/ft_striter.c
        libft/srcs/libft/ft_striteri.c
        libft/srcs/libft/ft_strjoin.c
        libft/srcs/libft/ft_strlcat.c
        libft/srcs/libft/ft_strlen.c
        libft/srcs/libft/ft_strmap.c
        libft/srcs/libft/ft_strmapi.c
        libft/srcs/libft/ft_strncat.c
        libft/srcs/libft/ft_strncmp.c
        libft/srcs/libft/ft_strncpy.c
        libft/srcs/libft/ft_strnequ.c
        libft/srcs/libft/ft_strnew.c
        libft/srcs/libft/ft_strnstr.c
        libft/srcs/libft/ft_strrchr.c
        libft/srcs/libft/ft_strsplit.c
        libft/srcs/libft/ft_strstr.c
        libft/srcs/libft/ft_strsub.c
        libft/srcs/libft/ft_strtrim.c
        libft/srcs/libft/ft_tolower.c
        libft/srcs/libft/ft_toupper.c
        libft/srcs/libft/get_next_line.c
        libft/srcs/libftprintf/ft_isconv.c
        libft/srcs/libftprintf/ft_printf.c
        libft/srcs/libftprintf/ft_printf_conversion_c.c
        libft/srcs/libftprintf/ft_printf_conversion_d.c
        libft/srcs/libftprintf/ft_printf_conversion_lc.c
        libft/srcs/libftprintf/ft_printf_conversion_ld.c
        libft/srcs/libftprintf/ft_printf_conversion_lo.c
        libft/srcs/libftprintf/ft_printf_conversion_ls.c
        libft/srcs/libftprintf/ft_printf_conversion_lu.c
        libft/srcs/libftprintf/ft_printf_conversion_o.c
        libft/srcs/libftprintf/ft_printf_conversion_p.c
        libft/srcs/libftprintf/ft_printf_conversion_s.c
        libft/srcs/libftprintf/ft_printf_conversion_u.c
        libft/srcs/libftprintf/ft_printf_conversion_x.c
        libft/srcs/libftprintf/ft_printf_conversion_xmaj.c
        libft/srcs/libftprintf/ft_printf_flags.c
        libft/srcs/libftprintf/ft_printf_len_modifier.c
        libft/srcs/libftprintf/ft_printf_no_conv.c
        libft/srcs/libftprintf/ft_printf_percentage.c
        libft/srcs/libftprintf/ft_putwchar.c
        libft/srcs/libftprintf/ft_putwstr.c
        libft/srcs/libftprintf/ft_wstrlen.c
        libft/srcs/libftprintf/parser.c
        libft/srcs/libftprintf/signed_check.c
        libft/srcs/libftprintf/unsigned_check.c
        minilibx_macos/font.c
        minilibx_macos/mlx.h
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_opengl.h
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        resources/mlx_opengl.h
        srcs/main.c)

add_executable(scop ${SOURCE_FILES})